# crab-on-tree

./: .claudeignore  .codexignore  .gitignore  Cargo.toml  DESCRIPTION.md  DOCKING_GUIDE.md  DOCKING_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2A_COMPLETE.md  PHASE2A_PLAN.md  PHASE2_PLAN.md  PHASE2_TASKS.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  QUICKSTART.md  README.md  TEST_RESULTS.md  documentation.md  first-step.md
crates/app/: Cargo.toml
crates/app/src/: config.rs  effect.rs  executor.rs  job.rs  lib.rs  message.rs  reducer.rs  state.rs
crates/app/src/executor/: branch_jobs.rs  commit_jobs.rs  file_jobs.rs  repo_jobs.rs
crates/app/src/reducer/: branch_handlers.rs  commit_handlers.rs  file_handlers.rs  repo_handlers.rs
crates/app/src/reducer/helpers/: commit_view.rs  file_selection.rs  mod.rs
crates/app/tests/: integration_test.rs  reducer_test.rs
crates/git/: Cargo.toml
crates/git/examples/: api_spike.rs
crates/git/src/: error.rs  lib.rs  repo.rs
crates/git/src/repo/: branch.rs  commit.rs  file.rs  worktree.rs
crates/git/tests/: integration_test.rs
crates/ui_core/: Cargo.toml
crates/ui_core/src/: color.rs  lib.rs  (+3 more)
crates/ui_egui/: Cargo.toml
crates/ui_egui/src/: main.rs  widgets.rs
crates/ui_egui/src/components/: branch_conflict_dialog.rs  checkout_changes_dialog.rs  error_panel.rs  mod.rs  shortcuts_help.rs  top_panel.rs  welcome_view.rs
crates/ui_egui/src/panes/: branches.rs  changed_files.rs  commit_history.rs  commit_info.rs  diff_viewer.rs  mod.rs  scrollable_pane.rs
crates/ui_egui/src/runtime/: dock.rs  effects.rs  lifecycle.rs  mod.rs
crates/ui_egui/src/utils/: keyboard.rs  mod.rs  scroll_config.rs  theme.rs
crates/ui_egui/src/widgets/: bottom_panel.rs  diff_view.rs  file_content.rs  file_row.rs  mod.rs  selectable_row.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_4_PANE_LAYOUT.md  DESIGN_COMPARISON.md  FEATURE_RESIZABLE_PANELS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_QUICKSTART.md  KEYBOARD_SHORTCUTS.md  NEXT_PHASE_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  SPRINT_4_COMPLETE.md  SPRINT_4_PLAN.md  TASK_2.2_COMPLETE.md  TASK_3.1_COMPLETE.md  TASK_3.1_PLAN.md  TASK_3.2_COMPLETE.md  TASK_3.2_PLAN.md  TASK_3.3_COMPLETE.md  TASK_3.3_PLAN.md  TESTING.md  USER_GUIDE.md  api-spike-results.md  architecture.md  development.md  hybrid-approach.md  logging.md
scripts/: create_test_repos.sh
(+7 files in other folders)
